--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
     <!--====== MAIN ======-->
     <main class="main">
         <!--====== HOME ======-->
-        <section class="home section none" id="home">
+        <section class="home section" id="home">
             <div class="home__container container grid">
                 <h1 class="home__name">
                     Daniel Adediran
@@ -84,22 +84,33 @@
                         
                         <div class="geometric-box"></div>
                     </div>
-
+                    
                     <div class="home__social">
-                        <a href="" target="_blank" class="home__social-link">
+                        <a href="https://www.github.com/heisdanielade/" target="_blank" class="home__social-link">
                             <i class="ri-github-line"></i>
                         </a>
-                        <a href="" target="_blank" class="home__social-link">
+                        <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="home__social-link">
                             <i class="ri-instagram-line"></i>
                         </a>
-                        <a href="" target="_blank" class="home__social-link">
+                        <a href="#" target="_blank" class="home__social-link">
                             <i class="ri-linkedin-fill"></i>
                         </a>
                     </div>
                 </div>
 
                 <div class="home__info">
+                    <p class="home__description">
+                        <b>Software Engineer</b>, with knowledge in data analysis
+                         and engineering, I offer the best projects resulting in quality work.
+                    </p>
 
+                    <a href="#about" class="home__scroll">
+                        <div class="home__scroll-box">
+                            <i class="ri-arrow-down-s-line"></i>
+                        </div>
+
+                        <span class="home__scroll-text">Scroll Down</span>
+                    </a>
                 </div>
             </div>
         </section>
