fixed margin-inline error on container class

--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,13 @@
 </head>
 <body>
 
-    <!--====== HEADER ======-->
-    <header class="header" id="header">
+ <div id="page" class="page">
+       <!--====== HEADER ======-->
+       <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
                 <span class="nav__logo-circle"><i class="ri-terminal-line"></i></span>
-                <span class="nav__logo-name stroke-text">heisdanielade.</span>
+                <span class="nav__logo-name">heisdanielade.</span>
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -71,7 +72,7 @@
         <!--====== HOME ======-->
         <section class="home section" id="home">
             <div class="home__container container grid">
-                <h1 class="home__name">
+                <h1 class="home__name stroke-text">
                     Daniel Adediran
                 </h1>
 
@@ -140,6 +141,7 @@
     <!--====== FOOTER ======-->
     <footer id="footer" class="footer"></footer>
 
+ </div>
 
 
     <!-- JS files -->  
