minor changes to design

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 
                 <div class="home__perfil">
                     <div class="home__image">
-                        <img src="./assets/images/home-perfil.jpg" alt="img" class="home__img">
+                        <img src="./assets/images/main.jpg" alt="img" class="home__img">
                         <div class="home__shadow"></div>
                         <img src="./assets/svg/curved-arrow.svg" alt="" class="home__arrow">
                         <img src="./assets/svg/random-lines.svg" alt="" class="home__line">
@@ -101,8 +101,8 @@
 
                 <div class="home__info">
                     <p class="home__description">
-                        <b>Software Engineer</b>, with knowledge in data analysis
-                         and engineering, I offer the best projects resulting in quality work.
+                        <b>Software Engineer</b>, with excellent knowledge in data analysis
+                         and machine learning.
                     </p>
 
                     <a href="#about" class="home__scroll">
