--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
        <!--====== HEADER ======-->
        <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">
+            <a href="" class="nav__logo">
                 <span class="nav__logo-circle"><i class="ri-terminal-line"></i></span>
                 <span class="nav__logo-name">heisdanielade.</span>
             </a>
