--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 
                 <div class="home__perfil">
                     <div class="home__image">
-                        <img src="./assets/images/main.jpg" alt="img" class="home__img">
+                        <img src="./assets/images/me/me.jpg" alt="img" class="home__img">
                         <div class="home__shadow"></div>
                         <img src="./assets/svg/curved-arrow.svg" alt="" class="home__arrow">
                         <img src="./assets/svg/random-lines.svg" alt="" class="home__line">
