--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
 
                     <div class="about__perfil">
                         <div class="about__image">
-                            <img src="assets/images/about-perfil.jpg" alt="image" class="about__img">
+                            <img src="assets/images/me/me-1.jpg" alt="image" class="about__img">
                             
                             <div class="about__shadow"></div>
                             <div class="geometric-box"></div>
