changed first color

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,13 @@
     <!-- Page details -->
     <title>Portfolio | heisdanielade</title>
 </head>
+
 <body>
 
  <div id="page" class="page">
-       <!--====== HEADER ======-->
-       <header class="header" id="header">
+
+   <!--====== HEADER ======-->
+    <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
                 <span class="nav__logo-circle"><i class="ri-terminal-line"></i></span>
@@ -60,12 +62,11 @@
             <div class="nav__buttons">
                 <!-- Toggle button -->
                 <div class="nav__toggle" id="nav-toggle">
-                    <i class="ri-menu-4-line"></i>
+                    <i class="ri-menu-5-line"></i>
                 </div>
             </div>
         </nav>
     </header>
-
 
     <!--====== MAIN ======-->
     <main class="main">
@@ -122,47 +123,46 @@
         <!--====== ABOUT ======-->
         <section class="about section" id="about">
             <div class="about__container container grid">
-                    <h2 class="section__title-1">
-                        <span>About me.</span>
-                    </h2>
+                <h2 class="section__title-1">
+                    <span>About me.</span>
+                </h2>
 
-                    <div class="about__perfil">
-                        <div class="about__image">
-                            <img src="assets/images/me/me-4.jpg" alt="image" class="about__img">
-                            
+                <div class="about__perfil">
+                    <div class="about__image">
+                        <img src="assets/images/me/me-4.jpg" alt="image" class="about__img">
                             <div class="about__shadow"></div>
                             <div class="geometric-box"></div>
                             <img src="assets/svg/random-lines.svg" alt="" class="about__line">
-                            <div class="about__box"></div>
-                        </div>
-                    </div>  
-                    <div class="about__info">
-                        <p class="about__description">
-                            Passionate about creating <b>Web pages</b> with 
-                            <b>UI/UX User Interface</b>, I have years of 
-                            experience and many clients are happy with 
-                            the projects carried out.
-                        </p>
+                        <div class="about__box"></div>
+                </div>
+            </div>  
+                <div class="about__info">
+                    <p class="about__description">
+                        Passionate about creating <b>Web pages</b> with 
+                        <b>UI/UX User Interface</b>, I have years of 
+                        experience and many clients are happy with 
+                        the projects carried out.
+                    </p>
 
-                        <ul class="about__list">
-                            <li class="about__item">
-                                <b>My Skills Are:</b> HTML, CSS, JavaScript, 
-                                React, Git & GitHub, Bootstrap, Flutter & 
-                                Figma.
-                            </li>
-                        </ul>
+                    <ul class="about__list">
+                        <li class="about__item">
+                            <b>My Skills Are:</b> HTML, CSS, JavaScript, 
+                            React, Git & GitHub, Bootstrap, Flutter & 
+                            Figma.
+                        </li>
+                    </ul>
 
-                        <div class="about__buttons">
-                            <a href="#contact" class="button">
-                                <i class="ri-send-plane-line"></i>
-                                Contact Me
-                            </a>
+                    <div class="about__buttons">
+                        <a href="#contact" class="button">
+                            <i class="ri-send-plane-line"></i>
+                            Contact Me
+                        </a>
 
-                            <a href="#" target="_blank" class="button__ghost">
-                                <i class="ri-linkedin-box-line"></i>
-                            </a>
-                        </div>
+                        <a href="#" target="_blank" class="button__surprise">
+                            <i class="ri-fire-line"></i>
+                        </a>
                     </div>
+                </div>
             </div>
         </section>
 
