added surprise button

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
 
  <div id="page" class="page">
 
+    <button class="button__surprise">
+        <i class="ri-gift-line"></i>
+        <!-- <i class="ri-fire-line"></i> -->
+    </button>
+
+
    <!--====== HEADER ======-->
     <header class="header" id="header">
         <nav class="nav container">
@@ -157,17 +163,13 @@
                             <i class="ri-send-plane-line"></i>
                             Contact Me
                         </a>
-
-                        <a href="#" target="_blank" class="button__surprise">
-                            <i class="ri-fire-line"></i>
-                        </a>
                     </div>
                 </div>
             </div>
         </section>
 
         <!--====== SERVICES ======-->
-        <section class="services section">
+        <section class="none services section">
             <h2 class="section__title-2 stroke-text">
                 <span>Services.</span>
             </h2>
