contact section 82% done

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,8 @@
 
  <div id="page" class="page">
 
-    <button class="button__surprise">
-        <i class="ri-gift-line"></i>
-        <!-- <i class="ri-fire-line"></i> -->
+    <button class="theme__button" id="theme-btn">
+        <i class="ri-moon-line"></i>
     </button>
 
 
@@ -244,7 +243,7 @@
                     </h2>
 
                     <p class="contact__description-1">
-                        I will read all emails. Send me any message you want and I'll get back to you :)
+                        Send me a message and I'll get back to you :)
                     </p>
 
                     <div class="geometric-box"></div>
@@ -262,22 +261,22 @@
                                 <label for="name" class="contact__label">Name</label>
                             </div>
                             <div class="contact__box">
-                                <input type="text" name="user_email" class="contact__input" id="name" required placeholder="Email Address">
-                                <label for="name" class="contact__label">Email Address</label>
+                                <input type="text" name="user_email" class="contact__input" id="email" required placeholder="Email Address">
+                                <label for="email" class="contact__label">Email Address</label>
                             </div>
                             <div class="contact__box contact__area">
                                 <textarea name="user_message" id="message" class="contact__input" required placeholder="Message.."></textarea>
-                                <label for="name" class="contact__label">Message</label>
+                                <label for="message" class="contact__label">Message</label>
                             </div>
                         </div>
 
-                        <button type="submit" class="contact__button">
+                        <button type="submit" class="contact__button button">
                             <i class="ri-send-plane-fill"></i> Send Message
                         </button>
                     </form>
                 </div>
 
-                <div class="contact__social">
+                <div class="contact__social none">
                     <img src="assets/svg/curved-arrow.svg" alt="" class="contact__social-arrow">
                     
                     <div class="contact__social-data">
