fixed contact input error

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,6 @@
 
  <div id="page" class="page">
 
-    <button class="theme__button" id="theme-btn">
-        <i class="ri-moon-line"></i>
-    </button>
-
 
    <!--====== HEADER ======-->
     <header class="header" id="header">
@@ -110,7 +106,7 @@
 
                 <div class="home__info">
                     <p class="home__description">
-                        <b>Computer Science and Econometrics student</b>, with excellent knowledge in data analysis
+                        <b>CS and Econometrics student</b>, with excellent knowledge in data analysis
                          and machine learning.
                     </p>
 
@@ -168,7 +164,7 @@
         </section>
 
         <!--====== SERVICES ======-->
-        <section class="none services section">
+        <section class="services section">
             <h2 class="section__title-2 stroke-text">
                 <span>Services.</span>
             </h2>
@@ -243,7 +239,7 @@
                     </h2>
 
                     <p class="contact__description-1">
-                        Send me a message and I'll get back to you :)
+                        I will get back to you shortly :)
                     </p>
 
                     <div class="geometric-box"></div>
@@ -271,7 +267,7 @@
                         </div>
 
                         <button type="submit" class="contact__button button">
-                            <i class="ri-send-plane-fill"></i> Send Message
+                            Send Message
                         </button>
                     </form>
                 </div>
@@ -285,7 +281,7 @@
                                 Does not send emails.
                             </p>
                             <p class="contact__social-description-1">
-                                Write me on my social networks
+                                Write me on my social networks.
                             </p>
                         </div>
                     </div>
@@ -329,7 +325,7 @@
                 </ul>
 
                 <span class="footer__name">
-                    <a href="">heisdanielade</a>
+                    <a href="">heisdanielade.tech</a>
                 </span>
             </div>
         </footer>
