testing border radius on home section

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 
             <div class="nav__buttons">
                 <!-- Toggle button -->
-                <div class="nav__toggle" id="nav-toggle">
+                <div class="nav__toggle bro" id="nav-toggle">
                     <i class="ri-menu-5-line"></i>
                 </div>
             </div>
@@ -83,22 +83,22 @@
 
                 <div class="home__perfil">
                     <div class="home__image">
-                        <img src="./assets/images/me/me-4.jpg" alt="img" class="home__img">
+                        <img src="./assets/images/me/me-4.jpg" alt="img" class="home__img bro">
                         <div class="home__shadow"></div>
-                        <img src="./assets/svg/curved-arrow.svg" alt="" class="home__arrow">
+                        <img src="./assets/svg/curved-arrow.svg" alt="" class="home__arrow ">
                         <img src="./assets/svg/random-lines.svg" alt="" class="home__line">
                         
                         <div class="geometric-box"></div>
                     </div>
                     
                     <div class="home__social">
-                        <a href="https://www.github.com/heisdanielade/" target="_blank" class="home__social-link">
+                        <a href="https://www.github.com/heisdanielade/" target="_blank" class="home__social-link bro">
                             <i class="ri-github-line"></i>
                         </a>
-                        <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="home__social-link">
+                        <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="home__social-link bro">
                             <i class="ri-instagram-line"></i>
                         </a>
-                        <a href="#" target="_blank" class="home__social-link">
+                        <a href="#" target="_blank" class="home__social-link bro">
                             <i class="ri-linkedin-fill"></i>
                         </a>
                     </div>
@@ -111,7 +111,7 @@
                     </p>
 
                     <a href="#about" class="home__scroll">
-                        <div class="home__scroll-box">
+                        <div class="home__scroll-box bro">
                             <i class="ri-arrow-down-s-line"></i>
                         </div>
 
@@ -226,7 +226,7 @@
         </section>
 
         <!--====== PROJECTS ======-->
-        <section class="projects section" id="projects">
+        <section class="projects  section" id="projects">
 
         </section>
 
